# FinalProject-Operating-Systems

./: .gitignore  CMakeLists.txt  README.md
include/: commands.h  pageAlgorithms.h  pageFaultSim.h  person_alogrithm_lib.h  threadWrapper.h  typeAlias.h
qtTemplates/: PageFaultDisplay.cpp  PageFaultDisplay.h  PageFaultDisplay.ui  pageFaultModel.cpp  pageFaultModel.h
src/: commands.cpp  main.cpp  pageAlgorithms.cpp  pageFaultSim.cpp  person_alogrithm_lib.cpp  shell_wrap.cpp  threadWrapper.cpp
